# Embedded_Systems

./: CMakeLists.txt  README.md
Exercise_Sheet_2/: CMakeLists.txt
Exercise_Sheet_2/src/: dibse.cpp  dibse.h  distance.cpp  distance.h  main.cpp
Exercise_Sheet_3/: CMakeLists.txt
Exercise_Sheet_3/src/: main.cpp  main1.cpp  sleep_delay.cpp  sleep_delay.h
Exercise_Sheet_3_2_new/: CMakeLists.txt
Exercise_Sheet_3_2_new/src/: JoystickHigh.cpp  JoystickHigh.h  ampel.cpp  ampel.h  main2.cpp
Exercise_Sheet_4/src/: main.cpp  temperature.cpp  temperature.h
Exercise_Sheet_5/: CMakeLists.txt  platformio.ini
Exercise_Sheet_5/src/: ClapDetection.cpp  ClapDetection.h  DIBSE.cpp  DIBSE.h  main.cpp
Exerxise_Sheet_1/: CMakeLists.txt
Exerxise_Sheet_1/include/: bitoperations.h
Exerxise_Sheet_1/src/: main.cpp
New_Exercise_Sheet_1/: CMakeLists.txt
New_Exercise_Sheet_1/include/: bitoperations.h
New_Exercise_Sheet_1/src/: main.cpp
